# ksp_login

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
ksp_login/: TODO  __init__.py  backends.py  context_processors.py  forms.py  pipeline.py  signals.py  urls.py  utils.py  views.py
ksp_login/locale/sk/LC_MESSAGES/: django.mo  django.po
ksp_login/static/ksp_login/css/: base.css  js_only.css
ksp_login/static/ksp_login/img/: sources.txt
ksp_login/static/ksp_login/js/: backend_list.js  jquery.init.js
ksp_login/templates/ksp_login/: base.html  info.html  invalid_disconnect.html  login.html  password.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt  registration.html  settings.html
ksp_login/templates/ksp_login/parts/: associated_accounts_list.html  backend_list.html  include_javascript.html  login_box.html  login_full_contents.html  multiple_forms.html  single_form.html
ksp_login/templatetags/: ksp_login.py
tests/: manage.py  requirements.txt
tests/ksp_login_tests/: __init__.py  forms.py  models.py  settings.py  social_backend.py  tests.py  urls.py  utils.py
tests/ksp_login_tests/migrations/: 0001_initial.py
tests/ksp_login_tests/templates/: base.html
